# DecisionTree

./: DecisionTree.ipynb  Tree1.gv  pyproject.toml
datasets/: Train_DT.xlsx
