[tool.poetry]
name = "decisiontree"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pandas = "^2.0.3"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
