[tool.poetry]
name = "decisiontree"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
xgboost = "^1.7.6"
catboost = "^1.2"
lightgbm = "^4.0.0"
plotly = "^5.15.0"
plotly-express = "^0.4.1"
nbformat = "^5.9.2"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.0.3"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
